flowc/tests/fixtures/check_e153_where_literal_type.expected.err
tests/fixtures/check_e153_where_literal_type.flow:8:14: error[E153]: where predicate literal incompatible with field type: int vs float
