flowc/tests/fixtures/check_e153_where_literal_type.flow
type Plan = { id: string, cost: int }

tool best_plans() -> [Plan]
  effect deterministic

flow demo(Plan) -> [Plan] {
  ps = best_plans()
     | where cost <= 100.5
  ps
}
